--- a/frontend/imports/client/auctions.html
+++ b/frontend/imports/client/auctions.html
@@ -21,8 +21,10 @@
               {{#each auctionlets}}
                 <tr>
                   <td class="buttons">
-                    <a class="btn btn-default btn-round" href="/#!/" data-auctionletid="{{auctionletId}}" {{b "click: selectAuctionlet"}}>Bid</a>
-                    <a class="btn btn-default btn-round" href="/#!/auction/{{auctionletId}}">Detail</a>
+                    <div class="btn-group">
+                      <a class="btn btn-default btn-round" href="/#!/" data-auctionletid="{{auctionletId}}" {{b "click: selectAuctionlet"}}>Bid</a>
+                      <a class="btn btn-default btn-round" href="/#!/auction/{{auctionletId}}">Detail</a>
+                    </div>
                   </td>
                   <td>{{formatBalance (fromWei sell_amount)}}</td>
                   <td>
