ui fixes bidding

--- a/frontend/imports/client/auctionlet.html
+++ b/frontend/imports/client/auctionlet.html
@@ -39,7 +39,7 @@
           {{/if}}
         </table>
         {{#unless expired}}
-          {{> newbid auctionlet=auctionlet}}
+          {{> newbid auctionlet=auctionlet close=false }}
         {{else}}
         <div class="form-group">
           <span>Auctionlet has expired.</span>
