--- a/frontend/imports/client/auctions.html
+++ b/frontend/imports/client/auctions.html
@@ -55,7 +55,7 @@
           </tbody>
         </table>
         {{#if auctionletSelected}}
-          {{> newbid auctionlet=auctionletSelected close=true }}
+          {{> newbid auctionlet=auctionletSelected bid=0 close=true }}
         {{/if}}
     </div>
   </div>
