--- a/frontend/imports/client/newbid.html
+++ b/frontend/imports/client/newbid.html
@@ -1,90 +1,94 @@
 <template name="newbid">
   <section class="newbid-section grey{{#if shade}} shade{{/if}}">
-    {{#if close}}
-    <div class="row">
-      <div class="col-md-12">
-        <a href="#" alt="Close bid" title="Close bid" class="btn close pull-right"><i class="fa fa-times"></i></a>
+    {{#if auction}}
+      {{#if close}}
+      <div class="row">
+        <div class="col-md-12">
+          <a href="#" alt="Close bid" title="Close bid" class="btn close pull-right"><i class="fa fa-times"></i></a>
+        </div>
       </div>
-    </div>
+      {{/if}}
+      <div class="row">
+        <div class="col-md-6 col-sm-6 col-xs-6">
+          <div class="row">
+            <div class="col-md-6">
+              <p>MIMIMUM BID INCREASE</p>
+            </div>
+            <div class="col-md-6">
+              <div class="input-group">
+                <input class="form-control" type="number" min="1" step="1" disabled {{b "value: auction.min_increase"}}>
+                <span class="input-group-addon">%</span>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <p>CLOSES WITHOUT BID IN</p>
+            </div>
+            <div class="col-md-6">
+              <div class="input-group">
+                <input class="form-control" type="number" min="0" disabled {{b "value: auction.duration"}}>
+                <span class="input-group-addon">seconds</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-sm-6 col-xs-6">
+          <div class="row">
+            <div class="col-md-6">
+              <p>PRICE</p>
+            </div>
+            <div class="col-md-6">
+              <div class="input-group">
+                <input class="form-control" id="inputBid" type="number" {{bidsDisabled}} {{b "value: bid"}}>
+                <span class="input-group-addon ETH">{{ETHToken.name}}</span>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <p>UNIT PRICE</p>
+            </div>
+            <div class="col-md-6">
+              <div class="input-group">
+                <input class="form-control" id="inputUnitPrice" type="number" {{bidsDisabled}} {{b "value: unitPrice"}}>
+                <span class="input-group-addon">
+                  <span class="ETH">{{ETHToken.name}}</span>/<span class="MKR">{{MKRToken.name}}</span>
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <p>AMOUNT</p>
+            </div>
+            <div class="col-md-6">
+              <div class="input-group">
+                <input class="form-control" type="number" disabled value="{{formatBalance (fromWei auction.sell_amount)}}">
+                <span class="input-group-addon MKR">{{MKRToken.name}}</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          {{#if or syncing outOfSync}}<div id='spnBidMessage' class="messageDiv alert alert-info">Waiting for synchronization...</div>{{/if}}
+          {{#if bidMessageRelevant}}
+            <div id='spnBidMessage' class="messageDiv alert alert-{{bidMessageType}}">{{{ bidMessage }}}</div>
+          {{/if}}
+          {{#if bidProgress}}
+            <div class="progress">
+              <p>{{{bidMessage}}}</p>
+              <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="{{bidProgress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{bidProgress}}%"></div>
+            </div>
+          {{else}}
+            <button class="pull-right btn btn-mint btn-round" {{bidsDisabled}} {{b "click: create"}} disabled="{{or syncing outOfSync}}">Place bid</button>
+          {{/if}}
+        </div>
+      </div>
+    {{else}}
+      {{{loaderIcon}}}
     {{/if}}
-    <div class="row">
-      <div class="col-md-6 col-sm-6 col-xs-6">
-        <div class="row">
-          <div class="col-md-6">
-            <p>MIMIMUM BID INCREASE</p>
-          </div>
-          <div class="col-md-6">
-            <div class="input-group">
-              <input class="form-control" type="number" min="1" step="1" disabled {{b "value: auction.min_increase"}}>
-              <span class="input-group-addon">%</span>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <p>CLOSES WITHOUT BID IN</p>
-          </div>
-          <div class="col-md-6">
-            <div class="input-group">
-              <input class="form-control" type="number" min="0" disabled {{b "value: auction.duration"}}>
-              <span class="input-group-addon">seconds</span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6 col-sm-6 col-xs-6">
-        <div class="row">
-          <div class="col-md-6">
-            <p>PRICE</p>
-          </div>
-          <div class="col-md-6">
-            <div class="input-group">
-              <input class="form-control" id="inputBid" type="number" {{bidsDisabled}} {{b "value: bid"}}>
-              <span class="input-group-addon ETH">{{ETHToken.name}}</span>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <p>UNIT PRICE</p>
-          </div>
-          <div class="col-md-6">
-            <div class="input-group">
-              <input class="form-control" id="inputUnitPrice" type="number" {{bidsDisabled}} {{b "value: unitPrice"}}>
-              <span class="input-group-addon">
-                <span class="ETH">{{ETHToken.name}}</span>/<span class="MKR">{{MKRToken.name}}</span>
-              </span>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <p>AMOUNT</p>
-          </div>
-          <div class="col-md-6">
-            <div class="input-group">
-              <input class="form-control" type="number" disabled value="{{formatBalance (fromWei auction.sell_amount)}}">
-              <span class="input-group-addon MKR">{{MKRToken.name}}</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        {{#if or syncing outOfSync}}<div id='spnBidMessage' class="messageDiv alert alert-info">Waiting for synchronization...</div>{{/if}}
-        {{#if bidMessageRelevant}}
-          <div id='spnBidMessage' class="messageDiv alert alert-{{bidMessageType}}">{{{ bidMessage }}}</div>
-        {{/if}}
-        {{#if bidProgress}}
-          <div class="progress">
-            <p>{{{bidMessage}}}</p>
-            <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="{{bidProgress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{bidProgress}}%"></div>
-          </div>
-        {{else}}
-          <button class="pull-right btn btn-mint btn-round" {{bidsDisabled}} {{b "click: create"}} disabled="{{or syncing outOfSync}}">Place bid</button>
-        {{/if}}
-      </div>
-    </div>
   </section>
 </template>
