--- a/frontend/imports/client/unclaimed.html
+++ b/frontend/imports/client/unclaimed.html
@@ -1,23 +1,29 @@
 <template name="unclaimed">
-  <div class="row">
-    <div class="unclaimed-section boxDiv col-md-12">
-      <h2>You have unclaimed tokens!</h2>
-      <table class="table">
-        <thead>
-          <tr>
-            <th></th>
-            <th>Auctionlet</th>
-            <th>MKR</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td><button class="btn btn-default btn-round" {{b "click: claim"}}>Claim</button></td>
-            <td><a href="{{etherscanHref}}{{auction.creator}}" target="_blank">{{shortAddress auction.creator}}...</a></td>
-            <td>{{formatBalance (fromWei auction.sell_amount)}} <span class="MKR">{{MKRToken.name}}</span></td>
-          </tr>
-        </tbody>
-      </table>
+  {{#if count}}
+    <div class="row">
+      <div class="unclaimed-section boxDiv col-md-12">
+        <h2>You have unclaimed tokens!</h2>
+        <table class="table">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Auctionlet</th>
+              <th>MKR</th>
+              <th>Unit Price</th>
+            </tr>
+          </thead>
+          <tbody>
+            {{#each auctionlets}}
+              <tr>
+                <td><button class="btn btn-default btn-round" {{b "click: claim"}}>Claim</button></td>
+                <td>{{auctionletId}}</td>
+                <td>{{formatBalance (fromWei sell_amount)}} <span class="MKR">{{MKRToken.name}}</span></td>
+                <td>{{formatBalance (unit_price)}} <span class="ETH">{{ETHToken.name}}</span>/<span class="MKR">{{MKRToken.name}}</span></td>
+              </tr>
+            {{/each}}
+          </tbody>
+        </table>
+      </div>
     </div>
-  </div>
+  {{/if}}
 </template>
