Unclaimed go to detail link

--- a/frontend/imports/client/unclaimed.html
+++ b/frontend/imports/client/unclaimed.html
@@ -15,7 +15,7 @@
           <tbody>
             {{#each auctionlets}}
               <tr>
-                <td><button class="btn btn-default btn-round" {{b "click: claim"}}>Claim</button></td>
+                <td><a class="btn btn-default btn-round" href="/#!/auction/{{auctionletId}}">Detail</a></td>
                 <td>{{auctionletId}}</td>
                 <td>{{formatBalance (fromWei sell_amount)}} <span class="MKR">{{MKRToken.name}}</span></td>
                 <td>{{formatBalance (unit_price)}} <span class="ETH">{{ETHToken.name}}</span>/<span class="MKR">{{MKRToken.name}}</span></td>
