--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -12,7 +12,7 @@
     {{/if}}
     <div class="row">
       <div class="msg-disclaimer alert alert-shade col-md-12">
-        <p><span class="red">WARNING!</span> Token Auction is undergoing alpha testing: Procees at your own risk, and use only small amount of MKR and ETH.</p>
+        <p><span class="red">WARNING!</span> Token Auction is undergoing alpha testing: Proceed at your own risk, and use only small amount of MKR and ETH.</p>
       </div>
     </div>
     <div>
