Share button first pass

--- a/frontend/imports/client/auction.html
+++ b/frontend/imports/client/auction.html
@@ -1,5 +1,6 @@
 <template name="auction">
   {{#if currentAuctionId}}
+  {{> share}}
   <div class="row">
     <div class="auction-section boxDiv col-md-12">
       <h2>Auction #{{auction.auctionId}}</h2>
