--- a/frontend/imports/client/auction.html
+++ b/frontend/imports/client/auction.html
@@ -23,7 +23,9 @@
         </thead>
         <tbody>
           <tr>
-            <td><a href="#share" class="btn btn-default btn-round">Share</a></td>
+            <td>
+              <button type="button" class="btn btn-default btn-round" data-toggle="modal" data-target="#shareModal">Share</button>
+            </td>
             <td><a href="{{etherscanHref}}{{auction.creator}}" target="_blank">{{shortAddress auction.creator}}...</a></td>
             <td>{{formatBalance (fromWei auction.sell_amount)}} <span class="MKR">{{MKRToken.name}}</span></td>
             <td>
