--- a/frontend/imports/client/share.html
+++ b/frontend/imports/client/share.html
@@ -1,13 +1,21 @@
 <template name="share">
-  <div class="row">
-    <div class="share-section boxDiv col-md-12">
-      <a href="#" alt="Close share" title="Close share" class="btn close pull-right"><i class="fa fa-times"></i></a>
-      <h2>Share</h2>
-      <div class="form-group">
-        <input class="form-control" type="url" value="{{absoluteUrl}}/#!/auction/{{auction.auctionId}}">
+  <div class="modal fade" id="shareModal" tabindex="-1" role="dialog" aria-labelledby="shareModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h2 class="modal-title" id="shareModalLabel">SHARE</h2>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <input class="form-control" id="shareTextbox" type="url" value="{{shareUrl}}">
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default btn-round" data-dismiss="modal">Done</button>
+          <button type="button" class="btn btn-mint btn-round" {{b "click: copy"}}>Copy</button>
+        </div>
       </div>
-      <button class="pull-right btn btn-default btn-round">Done</button>
-      <button class="pull-right btn btn-mint btn-round">Copy</button>
     </div>
   </div>
 </template>
