Title updated to 'token-auction-gui' (from 'WEEKLY MKR AUCTION')

--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -5,7 +5,7 @@
 <body>
   <div id="outer" class="container">
     <div id="inner">
-      <h1>WEEKLY MKR AUCTION</h1>
+      <h1>token-auction-gui</h1>
       {{> networkStatus}}
       {{> balance}}
       {{#if isConnected}}
