Bidding functionality removed from the frontend

--- a/frontend/imports/client/auctionlet.html
+++ b/frontend/imports/client/auctionlet.html
@@ -37,26 +37,7 @@
           </tr>
           {{/if}}
         </table>
-        {{#unless expired}}
-        <div class="form-group">
-          {{#if bidProgress}}
-          <div class="progress">
-            <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="{{bidProgress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{bidProgress}}%">
-            </div>
-          </div>
-          {{/if}}
-          {{#if bidMessage}}
-            <span id='spnBidMessage' class="messageSpan alert alert-{{bidMessageType}}">{{{ bidMessage }}}</span>
-            <br>
-          {{/if}}
-          <label for="inputBid">Enter a bid for the auctionlet</label>
-          <br>
-          <input class="form-control" id="inputBid" type="number" {{bidsDisabled}} value="{{bid}}" {{b "value: bid"}}> <span class="ETH">{{ETHToken.name}}</span>
-          <br>
-          <button class="btn btn-primary" {{bidsDisabled}} {{b "click: create"}} disabled="{{or syncing outOfSync}}">Place bid</button>
-          {{#if or syncing outOfSync}} Waiting for synchronization...{{/if}}
-        </div>
-        {{else}}
+        {{#if expired}}
         <div class="form-group">
           <span>Auctionlet has expired.</span>
           {{#unless unclaimed}}
@@ -83,7 +64,7 @@
             </table>
           {{/unless}}
         </div>
-        {{/unless}}
+        {{/if}}
       {{else}}
         <span>Auctionlet was not found</span>
       {{/unless}}
