--- a/frontend/imports/client/auctions.html
+++ b/frontend/imports/client/auctions.html
@@ -13,7 +13,7 @@
           </tr>
           {{#each auctionlets}}
           <tr>
-            <td><a href="/#!/auction/{{auctionletId}}">Bid</a></td>
+            <td><a href="/#!/auction/{{auctionletId}}">Show</a></td>
             <td>{{formatBalance (fromWei sell_amount)}}</td>
             <td>
               {{#if equals bids "undefined"}}
