Removed old features related to account selection, balances etc.

--- a/frontend/imports/client/auction.html
+++ b/frontend/imports/client/auction.html
@@ -10,11 +10,11 @@
         </tr>
         <tr>
           <td>Selling</td>
-          <td>{{formatBalance (fromWei auction.sell_amount)}} <span class="MKR">{{MKRToken.name}}</span></td>
+          <td>{{formatBalance (fromWei auction.sell_amount)}} <span class="MKR">MKR</span></td>
         </tr>
         <tr>
           <td>Start bid</td>
-          <td>{{formatBalance (fromWei auction.start_bid)}} <span class="ETH">{{ETHToken.name}}</span></td>
+          <td>{{formatBalance (fromWei auction.start_bid)}} <span class="ETH">ETH</span></td>
         </tr>
         <tr>
           <td>Minimum increase</td>
