Some labels updated

--- a/frontend/imports/client/accountselector.html
+++ b/frontend/imports/client/accountselector.html
@@ -1,5 +1,5 @@
 <template name="accountSelector">
   <div id="accountDiv">
-    <span>Auction contract: <a href="{{etherscanHref}}{{contract}}" target="_blank">{{contract}}</a></span>
+    <span>AuctionManager contract: <a href="{{etherscanHref}}{{contract}}" target="_blank">{{contract}}</a></span>
   </div>
 </template>
