--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Token auction</title>
+  <title>Token auction GUI</title>
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 </head>
 <body>
