Enumerating auctionlets and auctions

--- a/frontend/imports/client/auction.html
+++ b/frontend/imports/client/auction.html
@@ -21,8 +21,8 @@
           <td>{{auction.min_increase}}%</td>
         </tr>
         <tr>
-          <td>Duration <i>(after last bid)</i></td>
-          <td>{{auction.duration}} seconds</td>
+          <td>TTL <i>(after last bid)</i></td>
+          <td>{{auction.ttl}} seconds</td>
         </tr>
       </table>
       {{else}}
