--- a/frontend/imports/client/auctions.html
+++ b/frontend/imports/client/auctions.html
@@ -1,7 +1,7 @@
 <template name="auctions">
   {{#unless currentAuctionId}}
     <div class="boxDiv">
-        <h2>Auctions</h2>
+        <h2>Auctionlets Actually</h2>
         <table class="table table-condensed">
           <tr>
             <th></th>
@@ -10,10 +10,11 @@
             <th>Unit Price ETH</th>
             <th>Current Bid ETH</th>
             <th>Time Left</th>
+            <th>Expired</th>
           </tr>
           {{#each auctionlets}}
           <tr>
-            <td><a href="/#!/auction/{{auctionletId}}">Show</a></td>
+            <td><a href="/#!/auction/{{auctionletId}}">Show #{{auctionletId}}</a></td>
             <td>{{formatBalance (fromWei sell_amount)}}</td>
             <td>
               {{#if equals bids "undefined"}}
@@ -22,18 +23,39 @@
                 {{bids}}
               {{/if}}
             </td>
-            <td>{{formatBalance (unit_price)}}</td>
+            <td>{{last_bidder}} {{formatBalance (unit_price)}}</td>
             <td>{{formatBalance (fromWei buy_amount)}}</td>
             <td>
-              {{#if equals duration "undefined"}}
+              {{#if equals ttl "undefined"}}
                 Loading...
               {{else}}
                 {{countdown (timeRemaining auctionletId)}}
               {{/if}}
             </td>
+            <td>{{expired}}</td>
           </tr>
           {{/each}}
         </table>
     </div>
   {{/unless}}
+
+    <div class="boxDiv">
+        <h2>Real Auctions</h2>
+        <table class="table table-condensed">
+            <tr>
+                <th></th>
+                <th>Start bid</th>
+                <th>Selling</th>
+                <th>Buying</th>
+            </tr>
+            {{#each auctions}}
+            <tr>
+                <td><a href="/#!/auction/{{auctionId}}">Show #{{auctionId}}</a></td>
+                <td>{{formatBalance (fromWei start_bid)}}</td>
+                <td>{{selling}}</td>
+                <td>{{buying}}</td>
+            </tr>
+            {{/each}}
+        </table>
+    </div>
 </template>
