'accountselector' merged into 'network-status'

--- a/frontend/imports/client/network-status.html
+++ b/frontend/imports/client/network-status.html
@@ -18,5 +18,7 @@
       {{/if}}
     </ul>
   </div>
-  {{> accountSelector}}
+  <div id="accountDiv">
+    <span>AuctionManager contract: <a href="{{etherscanHref}}{{contract}}" target="_blank">{{contract}}</a></span>
+  </div>
 </template>
