Improved time remaining formatting

--- a/frontend/imports/client/auctionlet.html
+++ b/frontend/imports/client/auctionlet.html
@@ -18,7 +18,7 @@
             </tr>
             <tr>
               <td>Time remaining</td>
-              <td>{{countdown timeRemaining}}</td>
+              <td>{{formatTimeRemaining timeRemaining}}</td>
             </tr>
           {{/unless}}
           <tr>
