Improved date/time formatting

--- a/frontend/imports/client/auctionlet.html
+++ b/frontend/imports/client/auctionlet.html
@@ -14,7 +14,7 @@
             </tr>
             <tr>
               <td>Last bid time</td>
-              <td>{{auctionlet.last_bid_time}}</td>
+              <td>{{formatDateTime auctionlet.last_bid_time}}</td>
             </tr>
             <tr>
               <td>Time remaining</td>
@@ -57,7 +57,7 @@
               </tr>
               <tr>
                 <td>Last bid time</td>
-                <td>{{auctionlet.last_bid_time}}</td>
+                <td>{{formatDateTime auctionlet.last_bid_time}}</td>
               </tr>
             </table>
           {{/unless}}
