--- a/frontend/imports/client/auction.html
+++ b/frontend/imports/client/auction.html
@@ -11,18 +11,18 @@
       <table class="table table-condensed">
         <tr>
           <td>Creator</td>
-          <td><a href="{{etherscanHref}}{{auction.creator}}" target="_blank">{{auction.creator}}</a></td>
+          <td><a href="{{etherscanHref}}{{auction.creator}}" target="_blank" class="address">{{auction.creator}}</a></td>
         </tr>
         {{#if auction.isForward}}
           <tr>
             <td>Selling</td>
-            <td><strong>{{formatBalance (fromWei auction.sell_amount)}} <span class="MKR">MKR</span></strong> (for at least <strong>{{formatBalance (fromWei auction.start_bid)}} <span class="ETH">ETH</span></strong>)</td>
+            <td><span class="amount">{{formatBalance (fromWei auction.sell_amount)}} {{> token address=auction.selling}}</span> <span class="separator">for at least</span> <span class="amount">{{formatBalance (fromWei auction.start_bid)}} {{> token address=auction.buying}}</span></td>
           </tr>
         {{/if}}
         {{#if auction.isReverse}}
           <tr>
             <td>Buying</td>
-            <td><strong>{{formatBalance (fromWei auction.start_bid)}} <span class="ETH">ETH</span></strong> (for at most <strong>{{formatBalance (fromWei auction.sell_amount)}} <span class="MKR">MKR</span></strong> - <i>this info is fake!!!</i>)</td>
+            <td><span class="amount">{{formatBalance (fromWei auction.start_bid)}} {{> token address=auction.buying}}</span> <span class="separator">for at most</span> <span class="amount">{{formatBalance (fromWei auction.sell_amount)}} {{> token address=auction.selling}}</span> (<i>this info is fake!!!</i>)</td>
           </tr>
         {{/if}}
         <!--<tr>-->
